# unitdb

./: .flake8  LICENSE  Makefile  isort.cfg  pyproject.toml
.github/: lint.yaml
unitdb/: builder.py  constants.py  db.py  embedding.py  fts.py  structs.py  tokenizer.py
unitdb/search/: base.py  fts.py  sim.py
